trying to fix issue with background image on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,7 +28,7 @@ body{
 
 .banner-background {
     background-image: url("https://i.ibb.co/LPgDQmn/banner-image.png");
-    background-attachment: fixed;
+   
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
@@ -133,7 +133,7 @@ body{
     background-image: url("https://i.ibb.co/0fbmBCk/contact-banner.png");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 24vh;
+    height: 22vh;
     width: 100%;
     background-position: center 5%; 
     margin-top: 10rem;
@@ -421,6 +421,9 @@ th, td {
 }
 .promises-text{
     padding-bottom: 3rem;
+}
+.contact-text{
+    margin-top: 2rem;
 }
 
 .breadcrumbs-checkout{
